# author: Gavin Ha 
# 		  Dana-Farber Cancer Institute
#		 	  Broad Institute
# contact: <gavinha@gmail.com> or <gavinha@broadinstitute.org>
#
# TitanCNA GitHub: https://github.com/gavinha/TitanCNA
# Google Groups: https://groups.google.com/forum/#!forum/titancna 
# TitanCNA website: http://compbio.bccrc.ca/software/titan/
# TitanCNA KRONOS workflow: https://github.com/MO-BCCRC/titan_workflow

# date:	  May 10, 2017
#
# description: TitanCNA is a probabilistic framework for analyzing subclonal copy number alterations (CNA) and loss of heterozygosity (LOH) in whole genome sequencing of tumours. The main software is implemented as a R Bioconductor package with preprocessing tools implemented in Python and BAMtools (C++). The example provided will reproduce Figure 1 in the manuscript. However, it will be slightly different because the example is only based the analysis of chr2, not genome-wide.

Thank you for your interest in the TitanCNA software.

=================================================================================
TitanCNA version 1.15.0 changes 
=================================================================================
1) 10X Genomics analysis
  - Please see https://github.com/gavinha/TitanCNA/tree/10X_Genomics/scripts for instructions on running the 10X Genomics data

2) New functionality
  - plotSegmentMedians()
  - loadHaplotypeAlleleCounts(): loads input allele counts with phasing information
  - plotHaplotypeFraction(): results from 10X Genomics WGS data with phasing of haplotype blocks
  - loadDefaultParameters(): now accepts the argument "alleleEmissionModel" to specify "binomial" for standard WGS depth data or "Gaussian" for haplotype counts (summarized over a given bin size - see loadHaplotypeAlleleCounts())
  

3) Modified features (no changes for user-accessible functions)